--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Delius&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Tuffy:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .content{
     max-width: 1600px;
     margin: 0 auto;
@@ -6,11 +9,12 @@ nav a{
     text-align: center;
     color:black;
     text-decoration: none;
+    padding: 35px;
 }
-#hero-msg.h1{
+#hero-msg h1{
     text-align: center;
 }
-#hero-msg.h4{
+#hero-msg h4{
     text-align: center;
 }
 .button-box{
@@ -19,13 +23,19 @@ nav a{
 main section{
     text-align: center;
 }
+main section img{
+    box-sizing: border-box;
+}
 #background{
     height: 725px;
     background-color: #d4ac0d;
 }
 body{
-    background-color: #008c41;
+    background-color: #d4ac0d;
     margin: 0;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header{
     background-color: #d4ac0d;
@@ -38,11 +48,19 @@ nav a:hover{
     background-color: white;
     color:black;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .join{
     background-color: white;
     color:black;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover{
     background-color: #8cdc89;
@@ -53,17 +71,18 @@ nav a:hover{
     color:white;
 }
 .msg{
-    background-color: #d4ac0d;
-}
-.msg h2{
-    color:black;
+    background-color: #8cdc89;
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg p {
-    color:black;
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 footer{
     background-color: #d4ac0d;
     color:black;
+    padding: 25px 50px;
 }
 footer a{
     color:black;
@@ -76,17 +95,30 @@ footer p{
     font-size: 1.2em;
     text-decoration: underline;
 }
+footer .social img{
+     padding-top: 15px;
+}
 .home-title{
     color:black;
+    font-size: 2em;
+    margin-top: 10px;
 }
-h4{
-    color:black;
+.home-grid{
+    background-color: #8cdc89;
 }
 .icon{
     width: 80px;
+    padding-top: 10px;
+}
+#logo_link{
+    padding-top: 5px;
 }
 #logo_link img{
     width: 80px;
+    border-radius: 80px;
+}
+.endless-wealth{
+    padding: 50px 0;
 }
 #hero-img{
     width: 100%;
@@ -97,6 +129,45 @@ a:hover{
 .social img {
     width: 40px;
 }
+.give{
+    background-color: #d4ac0d;
+    padding:10px 20px;
+}
+.button{
+    background-color: #d4ac0d;
+    padding:10px 20px;
+}
+.give_card{
+    margin: 200px 0;
+}
+.enrich_card{
+    margin: 200px 0;
+}
+.inspire_card{
+    margin: 200px 0;
+}
 .card-img{
     width:300px;
+    border: 10px solid #008c41;
+}
+h1{
+    font-family: 'Delius';
+    color:#008c41;
+}
+h2{
+    font-family: 'Delius';
+    color:#008c41;
+    padding:0;
+}
+h4{
+    color: #008c41;
+    font-family: 'Tuffy';
+}
+p{
+    font-family: 'Tuffy';
+}
+a{
+    font-family: 'Tuffy';
+    text-decoration: none;
+    color: #008c41;
 }
