--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,17 +5,38 @@
     max-width: 1600px;
     margin: 0 auto;
 }
+nav{
+    display: flex;
+    justify-content: space-around;
+}
 nav a{
     text-align: center;
     color:black;
     text-decoration: none;
     padding: 35px;
 }
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 #hero-msg h1{
     text-align: center;
+    background-color: white;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 #hero-msg h4{
     text-align: center;
+    background-color: white;
 }
 .button-box{
     text-align: center;
@@ -29,6 +50,8 @@ main section img{
 #background{
     height: 725px;
     background-color: #d4ac0d;
+    grid-column: 1/11;
+    grid-row:4/9;
 }
 body{
     background-color: #d4ac0d;
@@ -39,6 +62,8 @@ body{
 }
 header{
     background-color: #d4ac0d;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 nav a:hover{
     background-color: #8cdc89;
@@ -74,6 +99,9 @@ nav a:hover{
     background-color: #8cdc89;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row:5/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg p {
     font-size: 0.8em;
@@ -83,6 +111,10 @@ footer{
     background-color: #d4ac0d;
     color:black;
     padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a{
     color:black;
@@ -105,6 +137,8 @@ footer .social img{
 }
 .home-grid{
     background-color: #8cdc89;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .icon{
     width: 80px;
@@ -112,13 +146,19 @@ footer .social img{
 }
 #logo_link{
     padding-top: 5px;
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 #logo_link img{
     width: 80px;
     border-radius: 80px;
 }
 .endless-wealth{
-    padding: 50px 0;
+    width:100%;
+    grid-column: 2/7;
+    grid-row:5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 #hero-img{
     width: 100%;
@@ -137,18 +177,33 @@ a:hover{
     background-color: #d4ac0d;
     padding:10px 20px;
 }
-.give_card{
+.give-card{
     margin: 200px 0;
+    width: 100%;
+    grid-column: 2/4;
+    grid-row:2/3;
 }
-.enrich_card{
+.enrich-card{
     margin: 200px 0;
+    width: 100%;
+    grid-column: 5/7;
+    grid-row:2/3;
 }
-.inspire_card{
+.inspire-card{
     margin: 200px 0;
+    width: 100%;
+    grid-column: 8/10;
+    grid-row:2/3;
 }
 .card-img{
-    width:300px;
     border: 10px solid #008c41;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
 }
 h1{
     font-family: 'Delius';
@@ -170,4 +225,47 @@ a{
     font-family: 'Tuffy';
     text-decoration: none;
     color: #008c41;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
