--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -208,6 +208,7 @@ a:hover{
 h1{
     font-family: 'Delius';
     color:#008c41;
+    text-align: center;
 }
 h2{
     font-family: 'Delius';
@@ -226,6 +227,72 @@ a{
     text-decoration: none;
     color: #008c41;
 }
+.basic-back{
+        width:100%;
+        margin: 0;
+}
+#bubbles{
+    width: 100%;
+    display:grid;
+    position: relative;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    background-image: url("wwr/images/mountains-of-wealth.jpg");
+    text-align: center;
+    font-family: 'Tuffy', Courier, monospace;
+}
+#bubbles div{
+    border-radius: 20px;
+
+}
+#bubbleWhat{
+    grid-column: 1/5;
+    grid-row:3/6;
+    background-color: #008c41;
+    width: 100%;
+}
+#bubbleWhy{
+    grid-column: 2/5;
+    grid-row: 5/7;
+    background-color: #8cdc89;
+    width: 100%;
+}
+#bubbleWhere{
+    grid-column: 4/6;
+    grid-row: 1/4;
+    width: 100%;
+    background-color: #8cdc89;
+}
+#bubbleEnjoy{
+    width: 100%;
+    grid-column: 3/6;
+    grid-row: 6/8;
+    background-color: #008c41;
+    overflow: hidden;
+}
+#space{
+    height:100px;
+}
+#payment-block{
+    background-color: #008c41;
+    margin: 0;
+    text-align: center;
+}
+#payment-block h2{
+    color:#d4ac0d;
+    margin:0;
+    text-align: center;
+}
+#qr-code{
+    padding:25px;
+    text-align: center;
+}
+#gif{
+    width:100%;
+    height: 100%;
+}
+
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
