--- a/finalproject/styles/index.css
+++ b/finalproject/styles/index.css
@@ -52,7 +52,7 @@ nav a:hover{
     p{
         margin:0;
         color:var(--primary);
-        font:normal normal normal 30px/30px var(--paragraph-font);
+        font:normal normal normal 2vw/2vw var(--paragraph-font);
     }
     li{
         font:normal normal normal 20px/25px var(--paragraph-font);
@@ -69,6 +69,7 @@ nav a:hover{
     }
     img{
         padding:0;
+        margin:0;
         border:5px dashed var(--primary);
         border-radius: 10px;
     }
@@ -119,7 +120,6 @@ nav a:hover{
     .coloredSection img{
         grid-column: 1/2;
         grid-row:3/5;
-        margin:25px;
         width:100%;
     }
 
@@ -136,6 +136,10 @@ nav a:hover{
 @media only screen and (max-width: 1000px) {
     main{
         width:100%
+    }
+    p{
+        font-size: 3vw;
+        line-height: 3vw;
     }
 }
 
@@ -157,7 +161,7 @@ nav a:hover{
     p{
         margin:0;
         color:var(--primary);
-        font:normal normal normal 30px/30px var(--paragraph-font);
+        font:normal normal normal 5vw/5vw var(--paragraph-font);
     }
     li{
         font:normal normal normal 20px/25px var(--paragraph-font);
