--- a/finalproject/styles/pix.css
+++ b/finalproject/styles/pix.css
@@ -1,5 +1,15 @@
 @import "index.css";
-
+.pictureSection{
+    margin:0;
+    padding:0;
+    text-align: center;
+}
+.pictureSection img{
+    width:100%;
+    margin:0;
+    padding:0;
+    border: none;
+}
 .slides{
     display:none;
     text-align: center;
@@ -12,25 +22,72 @@
 }
 .dot{
     background-color: var(--secondary);
+    border-radius: 100%;
+    height: 10px;
+    margin:0.5vw;
+    width: 10px;
 }
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-.prev, .next{
+.coloredSection{
+    display: block;
+    padding-bottom:5vw;
+    text-align: center;
+}
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+    padding: 1rem;
+    width: 100%;
+    box-sizing: border-box;
+}
+.gallery img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 8px;
+    display: block;
+}
+
+#prev, #next{
     cursor: pointer;
+    background-color: var(--secondary);
     user-select: none;
+    width:100%;
+    height:100%;
+    margin:auto 0;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border: 3px black solid;
+    border-radius: 10%;
 }
 
 #collage{
-
+    color: var(--accent1);
+    background-color:var(--secondary);
 }
-#previous{
-    background-color: var(--secondary);
+#slideshowRef{
+    grid-template-columns: 10vw 1fr 20vw 1fr 10vw;
+    height: 5vw;
+    padding:2vw;
+    text-align: center;
+    display: grid;
+}
+#prev{
+    grid-column: 1/2;
 }
 #next{
-    background-color: var(--secondary);
+    grid-column: 5/6;
 }
 #dots{
+    grid-column: 3/4;
+    text-align: center;
+    margin:auto;
+    display: flex;
 
 }
