--- a/finalproject/styles/index.css
+++ b/finalproject/styles/index.css
@@ -26,6 +26,60 @@ a{
 nav a:hover{
     background-color: var(--accent2);
 }
+.bubbledSection{
+    background-color: var(--secondary);
+    border:var(--primary) dashed 5px;
+    border-top: 0px none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.bubble{
+    background-color: var(--accent1);
+    border-radius: 50px;
+    padding: 1vw 5vw;
+}
+.bubble p{
+    margin:0;
+    padding:0;
+    width:100%;
+}
+.bubbledSection :nth-child(1){
+    grid-column: 1/3;
+    grid-row: 1/2;
+    text-align: center;
+}
+.bubbledSection :nth-child(2){
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.bubbledSection :nth-child(3){
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+.bubbledSection :nth-child(4){
+    grid-column: 1/2;
+    grid-row: 4/5;
+}
+
+.bubbledSection :nth-child(5){
+    grid-column: 2/3;
+    grid-row: 5/6;
+}
+
+.bubbledSection :nth-child(6){
+    grid-column: 1/2;
+    grid-row: 6/7;
+}
+.bubbledSection :nth-child(7){
+    grid-column: 2/3;
+    grid-row: 7/8;
+}
+#papered{
+    background-color: var(--secondary);
+    border:var(--primary) dashed 5px;
+    padding-bottom: 2vw;
+}
 @media only screen and (min-width: 800px) {
     main{
         width:75%;
@@ -72,6 +126,8 @@ nav a:hover{
         margin:0;
         border:5px dashed var(--primary);
         border-radius: 10px;
+        width: 100%;
+        box-sizing: border-box;
     }
     nav{
         text-align: center;
@@ -105,21 +161,6 @@ nav a:hover{
     .coloredSection h2{
         grid-column: 1/3;
         grid-row: 2/3;
-        width:100%;
-    }
-    .coloredSection p:nth-of-type(1){
-        margin-left:25px;
-        grid-column:2/3;
-        grid-row:3/4;
-    }
-    .coloredSection p:nth-of-type(2){
-        margin-left:25px;
-        grid-column:2/3;
-        grid-row:4/5;
-    }
-    .coloredSection img{
-        grid-column: 1/2;
-        grid-row:3/5;
         width:100%;
     }
 
@@ -180,6 +221,7 @@ nav a:hover{
         padding:0;
         border:5px dashed var(--primary);
         border-radius: 10px;
+        width: 100%;
     }
     nav{
         text-align: center;
