--- a/finalproject/styles/pix.css
+++ b/finalproject/styles/pix.css
@@ -2,6 +2,7 @@
 .pictureSection{
     margin:0;
     padding:0;
+    border:none;
     text-align: center;
 }
 .pictureSection img{
@@ -19,13 +20,19 @@
 }
 .slides img{
     height:50vh;
+    width:auto;
 }
 .dot{
-    background-color: var(--secondary);
-    border-radius: 100%;
-    height: 10px;
+    background-color: var(--primary);
+    border-radius: 50%;
     margin:0.5vw;
-    width: 10px;
+    width:10px;
+    height: 10px;
+}
+.dot.active{
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
 }
 .fade {
   animation-name: fade;
@@ -38,6 +45,8 @@
 }
 .gallery {
     display: grid;
+    background-color: var(--secondary);
+    border-top: 5px solid var(--accent2);
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
     padding: 1rem;
@@ -89,5 +98,6 @@
     text-align: center;
     margin:auto;
     display: flex;
-
+    align-items: center;
+    justify-content: center;
 }
